--- a/DockerApiViewer/Pages/Index.cshtml
+++ b/DockerApiViewer/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 @section Scripts
     {
     <script>
-        var urlBase = "http://localhost:8000";
+        var urlBase = "http://api:8000";
 
         function ajaxCall(tgtDiv, loaderDiv, urlSegment) {
             console.log(tgtDiv, loaderDiv, urlSegment);
